objects/fcio1__Fullcast_Account_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Applicable_Keys__c</fullName>
        <label>Applicable Keys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Hierarchy_Fields__c</fullName>
        <label>Hierarchy Fields</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Level__c</fullName>
        <label>Level</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Simulated_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simulate Custom Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Target_Entity__c</fullName>
        <label>Target Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory_External__c</fullName>
        <label>Territory External</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>fcio1__GTM__c</referenceTo>
        <relationshipLabel>Fullcast Account Hierarchies</relationshipLabel>
        <relationshipName>Fullcast_Account_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fullcast Account Hierarchy</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fullcast Account Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Account Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>